--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,22 +26,23 @@
         </activity>
         <activity
             android:name="com.example.wwvideoplayer.ListFileActivity"
-            android:label="@string/title_activity_list_file"
+            android:label="@string/app_name"
             android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="com.example.wwvideoplayer.LanguageSettingsActivity"
-            android:label="@string/title_activity_language_settings"
+            android:label="@string/app_name"
             android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="com.example.wwvideoplayer.PlayVideoActivity"
-            android:label="@string/title_activity_play_video"
+            android:label="@string/app_name"
             android:screenOrientation="landscape" >
             <intent-filter>
 				<action android:name="android.intent.action.VIEW"></action>
 				<category android:name="android.intent.category.DEFAULT"></category>
 				<data android:mimeType="video/mp4"></data>
+				<data android:mimeType="video/3gp"></data>
 			</intent-filter>
         </activity>
     </application>
